2022-09-01 burp-3.1.2
  * 904: openssl3 support
    - And switch to aes-cbc instead of blowfish, which is deprecated, for
      file encryption
  * 908: Only glibc supports %z in strptime()
  * Fix 2.x clients talking to 3.x servers.
  * Delete heaps more unused code

2022-05-01 burp-3.1.0
  * Remove protocol 2:
    - It hasn't been progressing for a long time, and is mostly just a
      distraction. So, I have made the decision to remove it.
  * Remove some unused Windows functions.

2021-08-31 burp-2.5.4
  * Windows cross-tools/depkgs:
     - Update to mingw-w64-v5.0.4
     - Update to prce-8.45
     - Stop building 32bit tools
  * 888:
     - Error out on duplicate include/exclude confs
     - Fix similar problem with duplicate glob reevaluation

2021-07-02 burp-2.5.2:
  * Upgrade Windows depkgs to:
     - openssl-1.1.1k.

2021-06-02 burp-2.5.0:
  * New latest version.
  * 826: Restrict permissions to Windows conf files.
  * 878: Fix missing newline when logged line is exactly 128 chars long.
  * Add SSL_get_error() detail in SSL accept and connect errors.

2021-05-02 burp-2.4.0:
  * New stable version, based on 2.3.38.

2020-11-07 Changes in burp-2.3.38:
  * From Demid R:
    - Added network access control at the burp level.
  * From svalouch:
    - Don't rewrite config if not neccessary in certificate exchange.
  * Cleaned up network access control config items, fixed monitor access.

2020-10-01 Changes in burp-2.3.36:
  * 211: Choose case sensitivity on list/verify/restore, with '-r/-R'.

2020-09-02 Changes in burp-2.3.34:
  * 18: Option to look at the timer script regularly.
  * From Demid R.:
    - Add max_parallel_backups feature.

2020-08-01 Changes in burp-2.3.32:
  * 686: Better email message when resuming is not possible.
    -  Add a configuration item to allow you to notify failure when a
       working directory is deleted.
  * Protect against hard-link attacks on restore by unlinking first.