@@ -7,6 +7,21 @@ me via the website contact page and we can talk about alternatives.
 
 This is the list of donations received to date. Many thanks to all of you.
 
+Donations for 2022-11:
+ *      £67.18 CompuMatter
+ *       £5.00 Eckart K.
+ *       £2.50 Aaron W.
+
+Donations for 2022-10:
+ *     £117.18 CompuMatter
+ *       £5.00 Eckart K.
+ *       £2.50 Aaron W.
+
+Donations for 2022-09:
+ *       £5.00 Eckart K.
+ *       £5.00 Jordi S.
+ *       £2.50 Aaron W.
+
 Donations for 2022-08:
  *      £85.00 CompuMatter
  *       £5.00 Eckart K.
