@@ -807,6 +807,8 @@ static int reset_conf(struct conf **c, enum conf_opt o)
 	  return sc_int(c[o], 0, CONF_FLAG_INCEXC, "strip_vss");
 	case OPT_VSS_DRIVES:
 	  return sc_str(c[o], 0, CONF_FLAG_INCEXC, "vss_drives");
+	case OPT_REMOTE_DRIVES:
+	  return sc_str(c[o], 0, CONF_FLAG_INCEXC, "remote_drives");
 	case OPT_ACL:
 	  return sc_int(c[o], 1, CONF_FLAG_INCEXC, "acl");
 	case OPT_XATTR:
