@@ -184,6 +184,7 @@ enum conf_opt
 	OPT_SPLIT_VSS,
 	OPT_STRIP_VSS,
 	OPT_VSS_DRIVES,
+	OPT_REMOTE_DRIVES,
 	OPT_ACL,
 	OPT_XATTR,
 	OPT_ATIME,
