@@ -361,3 +361,4 @@ int win32_getfsname(const char *file, char *fsname, size_t fsname_size);
 
 char *realpath(const char *path, char *resolved_path);
 char *get_fixed_drives(void);
+char *get_remote_drives(void);
